--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.25",
     "expo-blur": "~14.0.2",
